	php : compatibility with PHP 8

	Bugfixes:

	all : fixed empty object declarations in array comprehension (#9971)
	jvm : fixed equality checks for `Null<Float>` and `Null<Int>` (#9897)
	hl : fixed crash if a thread finishes without invoking `sendMessage`/`readMessage` (#9920)
	php : fixed local vars with certain names (_SERVER, _GET etc) overriding super global values (#9924)
	macro : added return type hint to haxe.macro.MacroStringTools.formatString (#9928)
	cs : fixed catching exceptions from static closures (#9957)
	eval : fixed `Std.random(arg)` for `arg` values of more than 30 bits (#9974)
	js : fixed `haxe.CallStack.exceptionStack` (#9968)

2020-09-11 4.1.4:

	General improvements:

	all : allowed `Any` as type parameter in `catch(e:SomeType<Any>)` (#9641)
	all : improved compilation speed for `try..catch` expressions (#9848)

	Bugfixes:

	all : fixed `switch` typing error for arrow functions with `Void` return type (#9813)
	all : fixed typing of arrow functions with empty blocks as bodies (closes #9843)
	macro : fixed `haxe.macro.Context.getResources()` (#9838)
	php : fixed false detection of `catch` vars in anonymous functions as captured from outer scope
	php : fixed return type of extern definition for `fseek` function
	cs,java : fixed generation of `@:generic` classes with anonymous functions (#9799)
	jvm : fixed sending/reading messages with `sys.thread.Threads` for threads created outside of Haxe (#9863)
	jvm : fixed multiplication of `Null<Float>` and `Int` (#9870)
	flash : fixed loading swc libraries containing `Vector` without a type parameter (#9805)
	hl : fixed messages being send to wrong threads with `sendMessage`/`readMessage` in `sys.thread.Thread` (#9875)
	cpp : fixed `cpp.Lib.stringReference()` (#8457)

2020-07-22 4.1.3

	General improvements:

	all : added an error on `return` outside of a function (#9659)
	php : support @:native("") for extern classes (#6448)
	python : support @:native("") for extern classes (#6448)

	Bugfixes:
