@@ -1,0 +1,10 @@
+import pack.Sub;
+
+class Main {
+	static public var test:Int;
+
+	static function main() {
+		test = Sub.test;
+		Sub.test = test;
+	}
+}
