@@ -1,0 +1,5 @@
+package pack;
+
+class Sub {
+	static public var test:Int = 10;
+}
