@@ -11,6 +11,7 @@
 	jvm : fixed equality checks for `Null<Float>` and `Null<Int>` (#9897)
 	hl : fixed crash if a thread finishes without invoking `sendMessage`/`readMessage` (#9920)
 	php : fixed local vars with certain names (_SERVER, _GET etc) overriding super global values (#9924)
+	php : fixed generation with directories in `-D php-front`. For example `-D php-front=sub/index.php` (#10037)
 	macro : added return type hint to haxe.macro.MacroStringTools.formatString (#9928)
 	cs : fixed catching exceptions from static closures (#9957)
 	eval : fixed `Std.random(arg)` for `arg` values of more than 30 bits (#9974)
